# andrea

./: CMakeLists.txt  README.md  TODO.md  build.sh  dependencies.sh  main.cpp  relevant_info.md  setup.py
include/andrea/: common.hpp  cuda.hpp  cuda_error_check.hpp  cuda_utils.hpp  tensor.hpp  tensor_ops.hpp
python/andrea/: __init__.py
python/src/: bindings.cpp
src/: cuda.cu  cuda_utils.cu  tensor.cpp  tensor_ops.cu
tests/python/: test.py
